package Model;

/**
 * Contains json writing and reading methods
 */
public interface IJSONIO {

    /**
     * Method for reading json
     */
    void readJSON();

    /**
     * Method for writing json
     */
    void writeJSON();

}
