package Model;

/**
 * Interface for adding mock data
 */
public interface IMockData {

    /**
     * Method for adding mock data
     */
    void addMockData();
}
